[gd_scene load_steps=2 format=3 uid="uid://ds7oo7t28hixv"]

[ext_resource type="Script" uid="uid://pkutyi8sxq5o" path="res://ui/main_menu.gd" id="1_t7e0r"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t7e0r")

[node name="ModeContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -33.0
offset_right = 106.0
offset_bottom = 33.0
grow_vertical = 2

[node name="LocalButton" type="Button" parent="ModeContainer"]
layout_mode = 2
text = "Local game"

[node name="OnlineButton" type="Button" parent="ModeContainer"]
layout_mode = 2
text = "Online game"

[node name="LocalPlayersContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayersLabel" type="Label" parent="LocalPlayersContainer"]
visible = false
layout_mode = 2
text = "Players:"

[node name="PlayerAmountEdit" type="LineEdit" parent="LocalPlayersContainer"]
layout_mode = 2
placeholder_text = "Players"
alignment = 1
max_length = 1
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_type = 2

[node name="LocalPlayButton" type="Button" parent="LocalPlayersContainer"]
layout_mode = 2
text = "Play"

[node name="LocalBackButton" type="Button" parent="LocalPlayersContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="ModeContainer/LocalButton" to="." method="_on_local_button_pressed"]
[connection signal="pressed" from="LocalPlayersContainer/LocalPlayButton" to="." method="_on_local_play_button_pressed"]
[connection signal="pressed" from="LocalPlayersContainer/LocalBackButton" to="." method="_on_local_back_button_pressed"]
